--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Josh Comeau <me@joshwcomeau.com>",
   "dependencies": {
+    "class-names": "^1.0.0",
     "new-component": "4.0.0",
     "prettier": "^2.6.2",
     "react": "18.2.0",
